--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					<div class="col-md-6 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.4s">
 						
 						<ul>
-							<li><i class="fa fa-home fa-2x"></i> Lane Shashu, house #4, Astana, Kazakhstan 010000</li><hr>
+							<li><i class="fa fa-home fa-2x"></i> Astana, Kazakhstan 010000</li><hr>
 							<li><i class="fa fa-phone fa-2x"></i> +7 771 583 66 15</li><hr>
 							<li><i class="fa fa-envelope fa-2x"></i> zhanar.kaliyeva@gmail.com</li>
 						</ul>
